@@ -5,11 +5,11 @@
  * under contract, and is subject to the Rights in Data-General Clause        *
  * 52.227-14, Alt. IV (DEC 2007).                                             *
  *                                                                            *
- * Copyright 2023 The MITRE Corporation. All Rights Reserved.                 *
+ * Copyright 2024 The MITRE Corporation. All Rights Reserved.                 *
  ******************************************************************************/
 
 /******************************************************************************
- * Copyright 2023 The MITRE Corporation                                       *
+ * Copyright 2024 The MITRE Corporation                                       *
  *                                                                            *
  * Licensed under the Apache License, Version 2.0 (the "License");            *
  * you may not use this file except in compliance with the License.           *
@@ -35,6 +35,7 @@ import org.apache.camel.Message;
 import org.junit.Test;
 import org.mitre.mpf.rest.api.pipelines.Action;
 import org.mitre.mpf.rest.api.pipelines.ActionType;
+import org.mitre.mpf.rest.api.pipelines.Algorithm;
 import org.mitre.mpf.rest.api.pipelines.Task;
 import org.mitre.mpf.test.TestUtil;
 import org.mitre.mpf.wfm.data.InProgressBatchJobsService;
@@ -48,6 +49,7 @@ import org.mitre.mpf.wfm.data.entities.transients.Track;
 import org.mitre.mpf.wfm.enums.ArtifactExtractionPolicy;
 import org.mitre.mpf.wfm.enums.MediaType;
 import org.mitre.mpf.wfm.enums.MpfConstants;
+import org.mitre.mpf.wfm.service.TaskMergingManager;
 import org.mitre.mpf.wfm.util.AggregateJobPropertiesUtil;
 
 import java.nio.file.Paths;
@@ -62,10 +64,13 @@ public class TestArtifactExtractionSplitter {
 
     private final AggregateJobPropertiesUtil _mockAggregateJobPropertiesUtil = mock(AggregateJobPropertiesUtil.class);
 
+    private final TaskMergingManager _mockTaskMergingManager = mock(TaskMergingManager.class);
+
 
     private final ArtifactExtractionSplitterImpl _artifactExtractionSplitter = new ArtifactExtractionSplitterImpl(
             _mockInProgressJobs,
-            _mockAggregateJobPropertiesUtil);
+            _mockAggregateJobPropertiesUtil,
+            _mockTaskMergingManager);
 
 
 
@@ -73,7 +78,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetFirstFrame() {
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(-1, true, false, false, 0),
+                createExtractionPropertySnapshot(-1, true, false, false, 0, ""),
                 10, // Exemplar
                 Arrays.asList(5, 9, 10), // Detection frames
                 Arrays.asList(5)); // Expected artifact frames
@@ -82,7 +87,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetMiddleFrame() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, false, true, false, 0);
+                -1, false, true, false, 0, "");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -118,7 +123,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetLastFrame() {
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(-1, false, false, true, 0),
+                createExtractionPropertySnapshot(-1, false, false, true, 0, ""),
                 10, // Exemplar
                 Arrays.asList(5, 9, 10), // Detection frames
                 Arrays.asList(10)); // Expected artifact frames
@@ -128,7 +133,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetFirstAndMiddleFrame() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, true, true, false, 0);
+                -1, true, true, false, 0, "");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -147,7 +152,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetFirstAndLastFrame() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, true, false, true, 0);
+                -1, true, false, true, 0, "");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -172,7 +177,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetMiddleAndLastFrame() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, false, true, true, 0);
+                -1, false, true, true, 0, "");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -191,7 +196,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetFirstFrameAndExemplar() {
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(0, true, false, false, 0),
+                createExtractionPropertySnapshot(0, true, false, false, 0, "CONFIDENCE"),
                 10,
                 Arrays.asList(5, 9, 10),
                 Arrays.asList(5, 10));
@@ -200,7 +205,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetMiddleFrameAndExemplar() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                0, false, true, false, 0);
+                0, false, true, false, 0, "CONFIDENCE");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -218,7 +223,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetLastFrameAndExemplar() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                0, false, false, true, 0);
+                0, false, false, true, 0, "CONFIDENCE");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -237,19 +242,20 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetTopConfidenceCount() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, false, false, false, 2);
+                -1, false, false, false, 2, "CONFIDENCE");
 
         ImmutableMap<Integer, Float> detectionFramesAndConfidences = ImmutableMap.of(
                 5, 0.5f,
                 9, 0.0f,
                 10, 1.0f,
+                11, 0.9f,
                 14, 0.9f);
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
                 10,
                 detectionFramesAndConfidences,
-                Arrays.asList(10, 14));
+                Arrays.asList(10, 11));
 
 
         detectionFramesAndConfidences = ImmutableMap.of(
@@ -269,7 +275,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetFirstFrameAndConfidenceCount() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, true, false, false, 2);
+                -1, true, false, false, 2, "CONFIDENCE");
 
         ImmutableMap<Integer, Float> detectionFramesAndConfidences = ImmutableMap.of(
                 5, 0.5f,
@@ -300,7 +306,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetMiddleFrameAndConfidenceCount() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, false, true, false, 2);
+                -1, false, true, false, 2, "CONFIDENCE");
 
         ImmutableMap<Integer, Float> detectionFramesAndConfidences = ImmutableMap.of(
                 5, 0.5f,
@@ -332,7 +338,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetLastFrameAndConfidenceCount() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, false, false, true, 2);
+                -1, false, false, true, 2, "CONFIDENCE");
 
         ImmutableMap<Integer, Float> detectionFramesAndConfidences = ImmutableMap.of(
                 5, 0.5f,
@@ -364,7 +370,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetExemplarFramePlus() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                2, false, false, false, 0);
+                2, false, false, false, 0, "CONFIDENCE");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -407,7 +413,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetFirstFrameAndExemplarFramePlus() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                2, true, false, false, 0);
+                2, true, false, false, 0, "CONFIDENCE");
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
                 extractionProps,
@@ -431,13 +437,13 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetMiddleFrameAndExemplarFramePlus() {
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(2, false, true, false, 0),
+                createExtractionPropertySnapshot(2, false, true, false, 0, "CONFIDENCE"),
                 16,
                 Arrays.asList(5, 9, 10, 16, 20),
                 Arrays.asList(9, 10, 16, 20));
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(1, false, true, false, 0),
+                createExtractionPropertySnapshot(1, false, true, false, 0, "CONFIDENCE"),
                 22,
                 Arrays.asList(5, 9, 10, 16, 20, 21, 22, 23),
                 Arrays.asList(16, 21, 22, 23));
@@ -446,13 +452,13 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetLastFrameAndExemplarFramePlus() {
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(2, false, false, true, 0),
+                createExtractionPropertySnapshot(2, false, false, true, 0, "CONFIDENCE"),
                 16,
                 Arrays.asList(5, 9, 10, 16, 20),
                 Arrays.asList(9, 10, 16, 20));
 
         runTest(ArtifactExtractionPolicy.ALL_TYPES,
-                createExtractionPropertySnapshot(1, false, false, true, 0),
+                createExtractionPropertySnapshot(1, false, false, true, 0, "CONFIDENCE"),
                 9,
                 Arrays.asList(5, 9, 10, 16, 20),
                 Arrays.asList(5, 9, 10, 20));
@@ -461,7 +467,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetNone() {
         runTest(ArtifactExtractionPolicy.NONE,
-                createExtractionPropertySnapshot(2, false, false, true, 0),
+                createExtractionPropertySnapshot(2, false, false, true, 0, ""),
                 16,
                 Arrays.asList(5, 9, 10, 16, 20),
                 Collections.emptyList());
@@ -472,7 +478,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void canGetAllDetections() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-                -1, false, false, false, 0);
+                -1, false, false, false, 0, "");
 
         runTest(ArtifactExtractionPolicy.ALL_DETECTIONS,
                 extractionProps,
@@ -488,7 +494,7 @@ public class TestArtifactExtractionSplitter {
 
 
         runTest(ArtifactExtractionPolicy.ALL_DETECTIONS,
-                createExtractionPropertySnapshot(2, true, false, false, 1),
+                createExtractionPropertySnapshot(2, true, false, false, 1, ""),
                 11,
                 Arrays.asList(5, 9, 10, 11, 20),
                 Arrays.asList(5, 9, 10, 11, 20));
@@ -500,7 +506,7 @@ public class TestArtifactExtractionSplitter {
     @Test
     public void topConfidenceCountTooLarge() {
         SystemPropertiesSnapshot extractionProps = createExtractionPropertySnapshot(
-            -1, false, false, false, 12);
+            -1, false, false, false, 12, "CONFIDENCE");
 
         ImmutableMap<Integer, Float> detectionFramesAndConfidences = ImmutableMap.of(
                 5, 0.5f,
@@ -519,14 +525,16 @@ public class TestArtifactExtractionSplitter {
     //////////////////////////////////////////////////////////
 
     private static SystemPropertiesSnapshot createExtractionPropertySnapshot(
-            int framePlus, boolean first, boolean middle, boolean last, int confidenceCount) {
-        ImmutableMap<String, String> properties = ImmutableMap.of(
-                "detection.artifact.extraction.policy.exemplar.frame.plus", String.valueOf(framePlus),
-                "detection.artifact.extraction.policy.first.frame", String.valueOf(first),
-                "detection.artifact.extraction.policy.middle.frame", String.valueOf(middle),
-                "detection.artifact.extraction.policy.last.frame", String.valueOf(last),
-                "detection.artifact.extraction.policy.top.confidence.count", String.valueOf(confidenceCount)
-        );
+            int framePlus, boolean first, boolean middle, boolean last, int qualityCount,
+            String qualityProp) {
+        ImmutableMap<String, String> properties = new ImmutableMap.Builder<String,String>()
+                .put("detection.artifact.extraction.policy.exemplar.frame.plus", String.valueOf(framePlus))
+                .put("detection.artifact.extraction.policy.first.frame", String.valueOf(first))
+                .put("detection.artifact.extraction.policy.middle.frame", String.valueOf(middle))
+                .put("detection.artifact.extraction.policy.last.frame", String.valueOf(last))
+                .put("detection.artifact.extraction.policy.top.quality.count", String.valueOf(qualityCount))
+                .put("detection.quality.selection.prop", qualityProp)
+                .build();
         return new SystemPropertiesSnapshot(properties);
     }
 
@@ -583,11 +591,10 @@ public class TestArtifactExtractionSplitter {
         when(job.getMedia())
                 .then(i -> ImmutableList.of(media));
 
-        Action action = mock(Action.class);
-        Task task = mock(Task.class);
-        ImmutableList<String> actionList = ImmutableList.of("Test Action");
-        when(task.getActions())
-                .thenReturn(actionList);
+        var algorithm = new Algorithm(
+                "Test Algo", null, ActionType.DETECTION, null, null, null, null, false, false);
+        var action = new Action("Test Action", null, algorithm.name(), List.of());
+        var task = new Task(null, null, List.of(action.name()));
 
         JobPipelineElements pipelineElements = mock(JobPipelineElements.class, RETURNS_DEEP_STUBS);
         when(job.getPipelineElements())
@@ -601,8 +608,8 @@ public class TestArtifactExtractionSplitter {
         when(pipelineElements.getTaskCount())
                 .thenReturn(1);
 
-        when(pipelineElements.getAlgorithm(anyInt(), anyInt()).getActionType())
-                .thenReturn(ActionType.DETECTION);
+        when(pipelineElements.getAlgorithm(anyInt(), anyInt()))
+                .thenReturn(algorithm);
 
 
         when(_mockAggregateJobPropertiesUtil.getCombinedProperties(job, media, action))
@@ -618,8 +625,10 @@ public class TestArtifactExtractionSplitter {
         .thenReturn(systemPropertiesSnapshot.lookup("detection.artifact.extraction.policy.middle.frame"));
         when(_mockAggregateJobPropertiesUtil.getValue(eq("ARTIFACT_EXTRACTION_POLICY_LAST_FRAME"), any(BatchJob.class), any(Media.class), any(Action.class)))
         .thenReturn(systemPropertiesSnapshot.lookup("detection.artifact.extraction.policy.last.frame"));
-        when(_mockAggregateJobPropertiesUtil.getValue(eq("ARTIFACT_EXTRACTION_POLICY_TOP_CONFIDENCE_COUNT"), any(BatchJob.class), any(Media.class), any(Action.class)))
-        .thenReturn(systemPropertiesSnapshot.lookup("detection.artifact.extraction.policy.top.confidence.count"));
+        when(_mockAggregateJobPropertiesUtil.getValue(eq("ARTIFACT_EXTRACTION_POLICY_TOP_QUALITY_COUNT"), any(BatchJob.class), any(Media.class), any(Action.class)))
+        .thenReturn(systemPropertiesSnapshot.lookup("detection.artifact.extraction.policy.top.quality.count"));
+        when(_mockAggregateJobPropertiesUtil.getValue(eq("QUALITY_SELECTION_PROPERTY"), any(BatchJob.class), any(Media.class), any(Action.class)))
+        .thenReturn(systemPropertiesSnapshot.lookup("detection.quality.selection.prop"));
 
 
         Exchange exchange = TestUtil.createTestExchange();
